force-app/main/default/objects/Agency_RM__c/Agency_RM__c.object-meta.xml
<CustomObject>
    <label>Agency RM</label>
    <nameField>
        <label>Agency - RM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency RMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>