force-app/main/default/objects/Agency_RM__c/fields/Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email__c</fullName>
    <formula>Agency__r.Company_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Email</label>
    <type>Text</type>
</CustomField>