force-app/main/default/objects/Agency_RM__c/fields/Agency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone__c</fullName>
    <formula>Agency__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Phone</label>
    <type>Text</type>
</CustomField>