force-app/main/default/objects/Agency_RM__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Manager MIRA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Agency_RMs</relationshipName>
    <type>Lookup</type>
</CustomField>