force-app/main/default/objects/Agency_RM__c/fields/RM_Mobile__c.field-meta.xml
<CustomField>
    <fullName>RM_Mobile__c</fullName>
    <formula>Relationship_Manager__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Mobile</label>
    <type>Text</type>
</CustomField>