force-app/main/default/objects/Agency_RM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Agency_Email__c</columns>
    <columns>Agency_Phone__c</columns>
    <columns>Relationship_Manager__c</columns>
    <columns>RM_Email__c</columns>
    <columns>RM_Mobile__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>